# Yuxi-Know

./: .dockerignore  .env.template  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  test_agents.py
backend/: pyproject.toml
backend/package/: MANIFEST.in  README.md  pyproject.toml
backend/package/yuxi/: __init__.py  main.py  pyproject.toml
backend/package/yuxi/agents/: __init__.py  base.py  context.py  models.py  state.py
backend/package/yuxi/config/: __init__.py  app.py  builtin_providers.py
backend/package/yuxi/knowledge/: __init__.py  base.py  factory.py  indexing.py  manager.py
backend/package/yuxi/models/: __init__.py  chat.py  embed.py  rerank.py
backend/package/yuxi/plugins/: __init__.py  deepseek_ocr_parser.py  document_processor_base.py  document_processor_factory.py  guard.py  mineru_official_parser.py  mineru_parser.py  paddlex_parser.py  rapid_ocr_processor.py
backend/package/yuxi/repositories/: agent_config_repository.py  agent_run_repository.py  conversation_repository.py  department_repository.py  evaluation_repository.py  knowledge_base_repository.py  knowledge_file_repository.py  mcp_server_repository.py  message_feedback_repository.py  model_provider_repository.py  operation_log_repository.py  skill_repository.py  subagent_repository.py  task_repository.py  user_repository.py
backend/package/yuxi/services/: agent_run_service.py  chat_service.py  chat_stream_service.py  conversation_service.py  doc_converter.py  evaluation_service.py  feedback_service.py  filesystem_service.py  history_query_service.py  knowledge_fs_service.py  langfuse_service.py  mcp_service.py  model_cache.py  model_provider_service.py  oidc_service.py  remote_skill_install_service.py  run_queue_service.py  run_worker.py  skill_service.py  subagent_service.py  task_service.py  thread_files_service.py  tool_service.py  upload_utils.py  viewer_filesystem_service.py  workspace_service.py
backend/package/yuxi/utils/: __init__.py  datetime_utils.py  evaluation_metrics.py  image_processor.py  logging_config.py  paths.py  prompts.py  question_utils.py  web_search.py
backend/scripts/: batch_upload.py  init.ps1  init.sh  migrate_all.py  migrate_business_from_sqlite.py  migrate_kb_metadata_to_db.py
backend/scripts/vllm/: main.py
backend/server/: main.py  worker_main.py
backend/server/routers/: __init__.py  apikey_router.py  auth_router.py  auth_router_oidc.py  chat_router.py  dashboard_router.py  department_router.py  filesystem_router.py  graph_router.py  knowledge_eval_router.py  knowledge_mindmap_router.py  knowledge_router.py  mcp_router.py  mindmap_router.py  model_provider_router.py  skill_router.py  subagent_router.py  system_router.py  system_task_router.py  tool_router.py  workspace_router.py
backend/server/utils/: access_log_middleware.py  auth_middleware.py  auth_utils.py  common_utils.py  lifespan.py  migrate.py  oidc_config.py  oidc_utils.py
backend/test/: .env.test.example  bruteforce_simulation.py  compare_kb_metadata_with_db.py  conftest.py  run_tests.sh  test_agent_artifacts_state.py  test_agent_run_service.py  test_chat_router_configs.py  test_chat_service_sync.py  test_chat_stream_attachment_materialize.py  test_chat_stream_interrupt.py  test_conversation_repository.py  test_conversation_service_attachment_state.py  test_dify_kb.py  test_graph_unit.py  test_kb_minio_cleanup.py  test_manual_eval.py  test_minimax_provider.py  test_mysql_connection.py  test_mysql_import.py  test_neo4j.py  test_parser_facade.py  test_ragflow_like_chunking.py  test_run_worker.py  test_sandbox_backends.py  test_sandbox_provisioner_config.py  test_skill_service.py  test_skills_backend.py  test_skills_backend_error_handling.py  test_subagent.py
backend/test/api/: test_agent_bubble_sort_e2e.py  test_apikey_router.py  test_attachment_and_agent_state.py  test_chat_agent_sync.py  test_chat_resume_batch_questions.py  test_chat_router.py  test_filesystem_router.py  test_knowledge_router.py  test_sandbox_e2e.py  test_settings_router.py  test_task_router.py  test_unified_graph_router.py  test_viewer_filesystem_e2e.py  test_viewer_filesystem_router.py
backend/test/data/: A_Dream_of_Red_Mansions.jsonl  A_Dream_of_Red_Mansions.txt  A_Dream_of_Red_Mansions_10hui.txt  A_Dream_of_Red_Mansions_tiny.jsonl  lightrag_kb_test.txt  test_csv_file.csv  测试文档.docx  测试演示.pptx  测试表格.xlsx
backend/test/e2e/: conftest.py  test_agent_bubble_sort_e2e.py  test_attachment_and_agent_state.py  test_viewer_filesystem_e2e.py
backend/test/integration/: conftest.py
backend/test/integration/api/: test_auth_router.py  test_chat_resume_batch_questions.py  test_chat_router.py  test_department_router.py  test_evaluation_router.py  test_graph_router_list.py  test_knowledge_router.py  test_system_router.py  test_task_router.py  test_unified_graph_router.py  test_viewer_filesystem_router.py  test_viewer_filesystem_security.py
backend/test/integration/services/: test_model_provider_runtime_connectivity.py
backend/test/resource/: test4.md
backend/test/unit/: test_auth_utils.py  test_chunking_token_limit.py  test_package_import.py  test_test_pre_kb.py
backend/test/unit/backends/: test_knowledge_base_backend.py  test_lightrag_serialization.py  test_sandbox_backends.py  test_semantic_chunking.py  test_skills_backend_error_handling.py
backend/test/unit/graphs/: test_graph_unit.py
backend/test/unit/middlewares/: test_summary_middleware.py
backend/test/unit/plugins/: test_milvus_kb.py  test_parser_facade.py  test_ragflow_like_chunking.py
backend/test/unit/routers/: test_mcp_router.py  test_skill_router.py  test_subagent.py
backend/test/unit/server/: test_model_provider_router.py
backend/test/unit/services/: test_agent_artifacts_state.py  test_agent_run_service.py  test_base_agent_langfuse_config.py  test_chat_service_langfuse_stream.py  test_chat_service_sync.py  test_chat_stream_interrupt.py  (+13 more)
(+853 files in other folders)
