[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuxi"
version = "0.6.0"
description = "Yuxi 智能知识库与知识图谱平台核心后端包"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "agent-sandbox>=0.0.26",
    "aioboto3>=13.0.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "chardet>=5.0.0",
    "colorlog>=6.9.0",
    "dashscope>=1.23.2",
    "deepagents>=0.2.5",
    "docling>=2.68.0",
    "docx2txt>=0.9",
    "httpx>=0.27.0",
    "json-repair>=0.54.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4",
    "langchain-core>=1.2.5",
    "langchain-deepseek>=1.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=1.0.2",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0",
    "langfuse>=4.0.0",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-sqlite>=3.0",
    "langgraph-cli[inmem]>=0.4",
    "langsmith>=0.4",
    "lightrag-hku>=1.4.6",
    "llama-index>=0.14",
    "llama-index-readers-file>=0.4.7",
    "loguru>=0.7.3",
    "markdownify>=1.1.0",
    "mcp>=1.20",
    "minio>=7.2.7",
    "neo4j>=5.28.1",
    "networkx>=3.5",
    "openai>=1.109",
    "opencv-python-headless>=4.11.0.86",
    "Pillow>=10.5.0",
    "psycopg[binary,pool]>=3.3.3",
    "pyjwt>=2.8.0",
    "pymilvus>=2.5.8",
    "pymupdf>=1.25.5",
    "pymysql>=1.1.0",
    "pypinyin>=0.55.0",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "rapidocr-onnxruntime>=1.4.4",
    "readability-lxml>=0.8.1",
    "redis>=5.2.0",
    "rich>=13.7.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "tabulate>=0.9.0",
    "tavily-python>=0.7.0",
    "tenacity>=8.0.0",
    "tomli",
    "tomli-w",
    "torch>=2.8.0",
    "torchvision==0.23",
    "tqdm>=4.66.4",
    "typer>=0.16.0",
    "unstructured>=0.17.2",
    "wcmatch>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["yuxi*"]


[tool.uv]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
yuxi = { path = "package", editable = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
